# FEM

./: .gitignore  CMakeLists.txt  SKEBOB.txt  main.cpp
Libs/linalg/: CMakeLists.txt
Libs/linalg/include/: matrix.h  vector.h
Libs/mesh/: CMakeLists.txt
Libs/mesh/assembly/include/: assembly.h
Libs/mesh/assembly/src/: assembly.cpp
Libs/mesh/element/include/: BaseElement.h  ElementData.h  PlaneIsoparametric.h  material.h  node.h
Libs/mesh/element/include/planeisometric/: ContactPlane.cpp  ContactPlane.h  PlaneIsoparametric.h  Planeisoparametric.cpp  StaticPlane.cpp  StaticPlane.h
Libs/mesh/element/src/: BaseElement.cpp  material.cpp
Libs/mesh/meshGenerator/include/: meshgenerator.h
Libs/mesh/meshGenerator/src/: meshgenerator.cpp
Libs/mesh/model/include/: ConcentratedForce.h  FEMModel.h  constants.h  geometry.h  loadFunction.h
Libs/mesh/model/src/: ConcentratedForce.cpp  FEMModel.cpp  geometry.cpp  loadFunction.cpp
Libs/solver/: CMakeLists.txt
Libs/solver/include/: SLAU.h  solver.h
Libs/solver/src/: slau.cpp  solver.cpp
PremadeMeshes/: h12xl20_12elems.txt  h12xl20_12elems_disp.txt  h12xl20_1element_shear.txt  h12xl20_1element_strain.txt
src/: CMakeLists.txt
src/src/: main.cpp
